Fix missing gap in product details on portrait mode

--- a/src/app/store/components/ProductPage.module.scss
+++ b/src/app/store/components/ProductPage.module.scss
@@ -16,7 +16,6 @@
         & {
             flex-direction: column;
             height: auto;
-            gap: 0;
 
             .thumbnail {
                 display: none;
